--- a/twitoff/templates/base.html
+++ b/twitoff/templates/base.html
@@ -4,6 +4,11 @@
     <title>TwitOff - {{ title }}</title>
     <link rel="stylesheet" href="https://unpkg.com/picnic"/>
   </head>
+  <style>
+     body {
+       background-image: url('pixil-frame-0.png'); 
+     }
+  </style>
   <body>
     <nav>
       <a href="/" class="brand"><span>TwitOff!</span></a>
