update image url

--- a/twitoff/templates/base.html
+++ b/twitoff/templates/base.html
@@ -6,7 +6,7 @@
   </head>
   <style>
      body {
-       background-image: url('twitoff/pixilart-drawing.png'); 
+       background-image: url('https://github.com/dustin-py/twitoff/pixilart-drawing.png'); 
      }
   </style>
   <body>
