--- a/twitoff/templates/base.html
+++ b/twitoff/templates/base.html
@@ -4,12 +4,22 @@
     <title>TwitOff - {{ title }}</title>
     <link rel="stylesheet" href="https://unpkg.com/picnic"/>
   </head>
-  <style>
-     body {
-       background-image: url('https://github.com/dustin-py/twitoff/pixilart-drawing.png'); 
-     }
-  </style>
   <body>
+    <style>
+      body {background: url("/static/images/pixil-frame-0(1).png");
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-color: #673ab7;}
+
+      nav {background-color: grey;
+           color: honeydew;}
+
+      #user {background-color: grey;
+             color: black}
+
+      #subs {background-color: grey;
+             color: black;}
+    </style>
     <nav>
       <a href="/" class="brand"><span>TwitOff!</span></a>
       <!-- responsive-->
@@ -25,18 +35,18 @@
         <h1>{{ title }}</h1>
         <p>Select two users to compare:</p>
         <form action="/compare" method="post">
-          <select name="user1">
+          <select id="user" name="user1">
             {% for user in users %}
             <option value="{{ user.username }}">{{ user.username }}</option>
             {% endfor %}
           </select>
-          <select name="user2">
+          <select id="user" name="user2">
             {% for user in users %}
             <option value="{{ user.username }}">{{ user.username }}</option>
             {% endfor %}
           </select>
-          <input type="text" name="tweet_text" placeholder="Tweet text to predict">
-          <input type="submit" value="Compare Users">
+          <input id="user" type="text" name="tweet_text" placeholder="Tweet text to predict">
+          <input id="subs" type="submit" value="Compare Users">
         </form>
       </div>
       <div>
@@ -45,8 +55,8 @@
         <a href="/user/{{ user.username }}"><span class="stack">{{ user.username }}</span></a>
         {% endfor %}
         <form action="/user" method="post">
-          <input type="text" name="user_name" placeholder="User to add">
-          <input type="submit" value="Add User">
+          <input id="user" type="text" name="user_name" placeholder="User to add">
+          <input id="subs" type="submit" value="Add User">
         </form>
       </div>
       {% endblock %}
